--- a/src/app/components/seller/seller-form-template/form-template.component.html
+++ b/src/app/components/seller/seller-form-template/form-template.component.html
@@ -1,11 +1,3 @@
-<!-- <select [(ngModel)]="selectedImageTag" style="background-color: #F7F7F7;height: 30px;border-radius: 8px; border: 0px; padding:5px;">
-    <option> Select Category </option>
-    <option *ngFor="let item of array" [ngValue]="item.name"> {{ item.name }} </option>
-  
-</select>
-{{ print("image is here", "") }}
-{{ print(selectedImageTag,selectedImageTag) }} -->
-
 <div [hidden]="uploadingPhotos" class="container form-stepper">
     <form [formGroup]="stepForm" autocomplete="off" novalidate #formRef="ngForm">
         <div class="row">
@@ -343,108 +335,6 @@
                 <input hidden #file type="file" name="myFile" accept="image/png,image/jpeg"
                 (change)="fileEventInitial($event)" value="" multiple />
             
-                <!-- <div class="row" *ngIf="allImages.length > 0">
-                    <div *ngFor="let image of allImages"
-                    class="col-sm-12 col-md-4 mb-3"
-                    style="position: relative;">
-
-                    <img src="{{image['img']}}" style="width: 100%; height:175px;" alt="..."/>
-                        
-                                                        
-                    <span style="width: 90%; left: 25px; position: absolute; top: 15px;">
-                        <select (change)="onChangeImageTag(image['key'], image['index'], image['img'])" [(ngModel)]="selectedImageTag" style="background-color: #F7F7F7;height: 30px;border-radius: 8px; border: 0px; padding:5px;">
-                            <option selected> {{ activeLang === 'en' ? 'Image Category' :'تصنيف الصورة' }} </option>
-                            <option *ngFor="let imageTag of imageTags" [ngValue]="imageTag.name_en"> {{ activeLang === 'en' ? imageTag.name_en : imageTag.name_ar }} </option>
-                        
-                        </select>
-                        
-
-                        <span style="position: absolute;
-                                right: 20px;
-                                background-color: #F7F7F7;
-                                width: 30px;
-                                text-align: center;
-                                border-radius: 10%;
-                                height: 30px;
-                                cursor: pointer;" (click)="deleteImg(image['key'], image['index'], image['img'])">
-                            <fa-icon style="font-size: 15px; position:relative; top:2px;" [icon]="faTrash" [styles]="{'stroke': 'red', 'color': 'red'}" class="user-faTimes"></fa-icon>
-                        </span>
-                    </span>
-
-                    </div>
-
-                </div> -->
-
-
-                <!-- <div *ngIf="imagesPreview() && imagesPreview().length > 0">
-                    <div *ngFor="let image of imagesPreview()"
-                    class="col-sm-12 col-md-4 mb-3"
-                    style="position: relative;">
-
-                    <img src="{{image['img']}}" style="width: 100%; height:175px;" alt="..."/>
-                        
-                                                        
-                    <span style="width: 90%; left: 25px; position: absolute; top: 15px;">
-                            <select (change)="onChangeImageTag(image['key'], image['index'], image['img'])" [(ngModel)]="selectedImageTag" style="background-color: #F7F7F7;height: 30px;border-radius: 8px; border: 0px; padding:5px;">
-                            <option selected> {{ activeLang === 'en' ? 'Image Category' :'تصنيف الصورة' }} </option>
-                            <option *ngFor="let imageTag of imageTags" [ngValue]="imageTag.name_en"> {{ activeLang === 'en' ? imageTag.name_en : imageTag.name_ar }} </option>
-                        
-                        </select>
-                        
-
-                        <span style="position: absolute;
-                                right: 20px;
-                                background-color: #F7F7F7;
-                                width: 30px;
-                                text-align: center;
-                                border-radius: 10%;
-                                height: 30px;
-                                cursor: pointer;" (click)="deleteImg(image['key'], image['index'])">
-                            <fa-icon style="font-size: 15px; position:relative; top:2px;" [icon]="faTrash" [styles]="{'stroke': 'red', 'color': 'red'}" class="user-faTimes"></fa-icon>
-                        </span>
-                    </span>
-
-                    </div>
-
-                </div> -->
-                
-
-                <!-- <div *ngFor="let tag of allTags">
-                    
-                    <div class="row" *ngIf="imagesToUpload[tag.name_en]?.length">
-                        <div class="col-sm-12 col-md-4 mb-3"
-                        *ngFor="let item of imagesToUpload[tag.name_en];let index = index;"
-                        style="position: relative;">
-
-                        
-
-                        <img src="{{item}}" style="width: 100%; height:175px;" alt="..."/>
-                        
-                                                        
-                        <span style="width: 90%; left: 25px; position: absolute; top: 15px;">
-                             <select (change)="onChangeImageTag(tag.name_en, index, item)" [(ngModel)]="selectedImageTag" style="background-color: #F7F7F7;height: 30px;border-radius: 8px; border: 0px; padding:5px;">
-                                <option selected> {{ activeLang === 'en' ? 'Image Category' :'تصنيف الصورة' }} </option>
-                                <option *ngFor="let imageTag of imageTags" [ngValue]="imageTag.name_en"> {{ activeLang === 'en' ? imageTag.name_en : imageTag.name_ar }} </option>
-                            
-                            </select>
-                            
-
-                            <span style="position: absolute;
-                                    right: 20px;
-                                    background-color: #F7F7F7;
-                                    width: 30px;
-                                    text-align: center;
-                                    border-radius: 10%;
-                                    height: 30px;
-                                    cursor: pointer;" (click)="deleteImg(tag.name_en, index)">
-                                <fa-icon style="font-size: 15px; position:relative; top:2px;" [icon]="faTrash" [styles]="{'stroke': 'red', 'color': 'red'}" class="user-faTimes"></fa-icon>
-                            </span>
-                        </span>
-
-                        </div>
-                    </div>
-                </div> -->
-
 
                 <div class="row" *ngIf="myFilesPreview['Initial']?.length">
 
@@ -455,17 +345,16 @@
                           
                         <img src="{{item['img']}}" style="width: 100%; height:175px;" alt="..."/>
                                                         
-                        <span style="width: 90%; left: 25px; position: absolute; top: 15px;">
+                        <span style="left: 25px; right: 25px; position: absolute; top: 15px;">
                            
-                             <select (change)="onChangeImageTag($event, index)" style="background-color: #F7F7F7;height: 30px;border-radius: 8px; border: 0px; padding:5px;">
+                             <select (change)="onChangeImageTag($event, index)" style="background-color: #F7F7F7;height: 30px;border-radius: 8px; border: 0px; padding: 0px 5px 0px 5px;">
                                 <option selected> {{ activeLang === 'en' ? 'Image Category' :'تصنيف الصورة' }} </option>
                                 <option *ngFor="let item of imageTags" [ngValue]="item.name_en"> {{ activeLang === 'en' ? item.name_en : item.name_ar }} </option>
                             
                             </select>
                             
-
                             <span style="position: absolute;
-                                    right: 20px;
+                                    right: 0px;
                                     background-color: #F7F7F7;
                                     width: 30px;
                                     text-align: center;
@@ -491,30 +380,10 @@
             
             <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs nav-pills">
                 
-                
-                <!-- <a 
-                (click)="file.click()"
-                    style="padding-top:5%; color: #f55441; text-decoration: underline !important;
-                    cursor: pointer;">
-                    {{'sell.View photos' | translate}}    
-                </a> -->
-              
-                
-                
-              
-               
-                <!-- <li ngbNavItem>
-                  <a ngbNavLink>Second</a>
-                  <ng-template ngbNavContent>Second content</ng-template>
-                </li> -->
             </ul>
             
             <div [ngbNavOutlet]="nav"></div>
-            <!-- <div class="col-lg-6 col-sm-12" *ngFor="let ctrl of imagesForm.controls | keyvalue;let index = index;">
-                dd
-            </div> -->
-        <!-- </form>     -->
+        
     </div>
-    <!-- <app-photos-uploader></app-photos-uploader> -->
 </div>
 
