--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -215,7 +215,20 @@
                 
             </div> -->
         </div>
+            <!-- <form (ngSubmit)="Getsearch()">
+            <input [(ngModel)]="searchQuery" name="searchQuery" type="text" placeholder="Search...">
+            <button type="submit">Search</button>
+            </form> -->
 
+            <form (ngSubmit)="Getsearch()">
+            <div class="search-container">
+                <input type="text" [(ngModel)]="searchQuery" (input)="GetHintSearch()" placeholder="Search...">
+                <button type="submit">Search</button>
+                <ul *ngIf="response.data.length > 0 && response.data !=='no results found'">
+                  <li *ngFor="let result of response.data">{{ result.name_en }}</li>
+                </ul>
+              </div>
+            </form>
         <!-- Second section (Recently Added)-->
         <div *ngIf="recentlyAdded && recentlyAdded.length > 0">
             <div class="recently-added">
