--- a/src/app/shared/components/price-range-slider/price-range-slider.component.scss
+++ b/src/app/shared/components/price-range-slider/price-range-slider.component.scss
@@ -19,7 +19,7 @@
     overflow: visible;
 }
 
-.Rectangle_1314_rbk {
+#Rectangle_1314_rbk {
     width: 140px;
     height: 24px;
     border-radius: 10px;
@@ -56,7 +56,7 @@
     overflow: visible;
 }
 
-.Rectangle_1315_rbp {
+#Rectangle_1315_rbp {
     width: 140px;
     height: 24px;
     border-radius: 10px;
@@ -86,14 +86,3 @@ input{
     font-size: 15px;
 }
 
-#btn{
-    margin-top: 25%;
-    margin-left: 37%;
-}
-
-#btn-done{
-    width: 65px;
-    color: #fa5a64;
-    border: 1px solid #fff;
-    background: #fff;
-}
