--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -436,41 +436,67 @@
                         padding: 16px;
                         border-top: none;
                         width: 326px ;
-                        height: 215px !important;
+                        height: 225px !important;
                         border-radius: 10px;
+                        // transform: translate(0px, 36px) !important;
                         @media (max-width: 425px) {
                             width: 340px;
                         }
-                        #Group_2629_qx {
-                            position: absolute;
-                            width: 520px;
-                            height: 304px;
-                            left: 115px;
-                            top: 148px;
-                            overflow: visible;
+                        
+                        #price_range{
+                            width: 100%;
+                            height: 100%;
                         }
-                        #Rectangle_1306_qy {
-                            fill: rgba(255,255,255,1);
-                        }
-                        .Rectangle_1306_qy {
-                            filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
-                            position: absolute;
+                        
+                        #textboxes {
+                            height: 50px;
                             overflow: visible;
-                            width: 538px;
-                            height: 322px;
-                            left: 0px;
-                            top: 0px;
-                        }
-                        #Group_2628_rbg {
-                            position: absolute;
-                            width: 460px;
-                            height: 86px;
-                            left: 30px;
-                            top: 188px;
-                            overflow: visible;
+                            display: flex;
                         }
 
+                        #from{
+                            width: 50%;
+                            height: fit-content;
+                        }
+                        
+                        #fromTextbox {
+                            
+                        }
+                        
+                        #Rectangle_1314_rbk {
+                            height: 24px;
+                            border-radius: 10px;
+                            border-color: rgba(153,178,175,1);
+                            color: rgba(153,178,175,1);
+                            padding-top: 10%;
+                            padding-bottom: 10%;
+                            padding-left: 5%;
+                        }
+                        
+                        #to {
+                            width: 50%;
+                            height: fit-content;
+                        }
+                 
+                        #Price_range_q {
+                            font-family: Roboto;
+                            font-weight: bold;
+                            font-size: 24px;
+                            color: #1e4937;
+                            // margin-bottom: 20%;
+                        }
 
+                        #Price_range_hint{
+                            font-family: Roboto;
+                            font-size: 13px;
+                        }
+                        
+                        #slider{
+                            margin-top: 5%;
+                            margin-bottom: 5%;
+                            width: 100%;
+                        }
+                     
                     }
                     .foot {
                         background: #fa5a64;
@@ -520,7 +546,7 @@
                             height: 45px;
                             font-size: 13px;
                             max-width: 100%;
-                            min-width: 60%;
+                            min-width: 61%;
                         }
                         .continueBtn{
                             min-width: 100%;
