--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -260,6 +260,161 @@
             }
             .sell-row,
             
+            .buyRent-row{
+	            display: flex;
+                justify-content: space-between;
+
+                @media (max-width: 425px) {
+                    display: block;
+                }
+
+                .separator{
+                    margin: 0% 0.5%;
+
+                    @media (max-width: 425px) {
+                        display: none;
+                    }
+                }
+
+                .options{
+                    width: 70%;
+
+                    @media (max-width: 425px) {
+                        width: 100%;
+                    }
+					
+					.all-options{
+						display: flex;
+						justify-content: space-between;
+
+						@media (max-width: 425px) {
+							display: block;
+						}
+					}
+					
+					.compound{
+                        display: flex;
+                        margin: 1%;
+
+                        @media (max-width: 425px) {
+                            margin-top: 25px;
+						}
+
+					}
+					
+                }
+
+                .actions{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+
+                
+                    .buttons{
+                        margin-top: 5%;
+
+                        @media (max-width: 425px) {
+                            margin-top: 0%;
+						}
+                    }
+
+                    .another-option{
+                        cursor: pointer; 
+                        display: flex; 
+                        justify-content: end; 
+                        margin: 5% 0%; 
+    
+                        .disabled{
+                            pointer-events: none;
+                            opacity: 0.5;
+                            padding: 0% 1% 0% 1%;
+                        }
+                    }
+                }
+
+            }
+
+            .buyRent-search{
+
+                display: flex;
+                justify-content: space-between;
+
+                @media (max-width: 425px) {
+                    display: block;
+                }
+
+                .search_textbox{
+                    width: 100%
+                }
+
+                .actions{
+                    width: 20%;
+
+                    @media (max-width: 425px) {
+                        width: 100%;
+                    }
+
+                    .another-option{
+                        cursor: pointer; 
+                        display: flex; 
+                        justify-content: end;
+                        margin: 1%;
+
+                        @media (max-width: 425px) {
+                            justify-content: center;
+                        }
+
+                    }
+                }
+
+                
+            }
+
+            .sellRental-row{
+                display: flex;
+
+                @media (max-width: 425px) {
+                    display: block;
+                }
+
+                .options{
+                    width: 80%;
+
+                    .all-options{
+                        display: flex;
+                        justify-content: flex-start;
+
+                        @media (max-width: 425px) {
+                            display: block;
+                        }
+                    }
+
+                    .another-option{
+                        cursor: pointer; 
+                        margin: 1%; 
+    
+                        .compound{
+                            display: flex;
+                        }
+    
+                        .disabled{
+                            pointer-events: none;
+                            opacity: 0.5;
+                        }
+                    }
+                }
+
+                .separator{
+                    margin: 0% 2%;
+
+                    @media (max-width: 425px) {
+                        display: none;
+                    }
+                }
+
+                
+            }
+            
             .rental-row {
                 .ngSelect {
                     @media (min-width: 1024px) {
@@ -330,14 +485,13 @@
 
                 .applyBtn {
                     height: 50px;
-                    // margin-top: 16%;
                     min-width: 150px;
                     border-radius: 10px;
-                    &:first-of-type{
-                        // margin-left: 5px;
-                        margin-left: 5px;
-                        margin-right: 5px;
-                    }
+                    margin-left: 5px;
+                    margin-right: 5px;
+                    margin-top: 5px;
+                    margin-bottom: 5px;
+                
                     @media (max-width: 768px) {
                         width: 100%;
                         height: 40px;
@@ -535,18 +689,22 @@
                     width: auto;
                     @media (min-width:1170px) and (max-width:1610px)  {
                         display: flex;
-                        flex-direction: row;
-                        margin-top: 3%;
-                        margin-bottom: 0px;
+                        min-height: -webkit-fill-available;
+                        align-items: center;
+                        min-width: fit-content;
+                        padding: 0% 1% 0% 1%;
+                        justify-content: center;
+
                         .firstbtn{
                             margin-left: 0;
                             margin-right: 5px;
                         }
                         .applyBtn{
                             height: 45px;
-                            font-size: 13px;
+                            font-size: 16px;
                             max-width: 100%;
-                            min-width: 61%;
+                            min-width: fit-content;
+                            width: 100%;
                         }
                         .continueBtn{
                             min-width: 100%;
@@ -576,7 +734,32 @@
                         }
                         .applyBtn{
                             width: calc(50% - 7px);
+                            min-width: fit-content;
                          }
+                    }
+
+                    @media (max-width:425px){
+                        justify-content: center;
+                        display: flex;
+                        .firstbtn{
+                            margin-left: 0;
+                            margin-right: 0;
+                        }
+                        .applyBtn{
+                            width: calc(50% - 7px);
+                            min-width: fit-content;
+                         }
+                    }
+                }
+
+                &.search_textbox{
+                    width: 100%;
+                    padding: 0% 1% 0% 1%;
+                    // padding-top: 2%;
+                    display: grid;
+                    align-items: center;
+                    li:hover {
+                        background-color: rgb(231, 231, 228);
                     }
                 }
             }
