--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,4 @@
-<div class="app-header" [ngClass]="{'rtl' : activeLang.title === 'AR' || activeLang === 'AR'}" style="width: 100%;
-z-index: 10;">
+<div class="app-header" [ngClass]="{'rtl' : activeLang.title === 'AR' || activeLang === 'AR'}">
     <!-- <div class="app-header__up">
         <div class="app-header__language">
             <span (click)="transform_language('en')" *ngIf="activeLang.title === 'AR' || activeLang === 'AR'" class="current">ع</span>
