--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -19,6 +19,9 @@ $active_background: transparent linear-gradient(180deg, #FD4965 0%, #FD7363 100%
 // }
 .app-header{
     // height: 80px;
+    width: 100%;
+    position: fixed;
+    z-index: 10;
     display: flex;
     box-shadow: 0 3px 6px #29292919;
     background: white;
@@ -422,11 +425,22 @@ ng-select{
 }
 
 @media (max-width:479px){
+    
+
     .app-header{
+        height: min-content;
+
         &__activity{
             p{
                 display: none;
             }
+        }
+
+        &__profile{
+            .loggedin{
+                display: none;
+            }
+
         }
     }
 }
