--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,9 +1,8 @@
 <div class="container-fluid">
 
-    <div class="footer row justify-content-center pt-5">
-        <div class="col-xs-12 col-sm-10">
-            <div class="row">
-                <div class="col-sm-12 col-sm-3 col-lg-3" style="width: 30% !important;">
+    <div class="footer justify-content-center pt-5">
+            <div class="responsive">
+                <div class="image">
                     <span class="logo">
                         <img src="../../../../assets/images/alaaqar_img.png" alt="..." />
 
@@ -22,28 +21,26 @@
                        
                     </div>
                 </div>
-                <div class="col-sm-12 col-sm-3 col-lg-3" style="width: 15% !important;">
+                <div class="links">
                     <h3> {{'footer.Important Links' | translate}}</h3>
                     <p> <a routerLink='/how-it-works'>{{'footer.How it works?' | translate}}</a></p>
                     <p><a routerLink='/about'>{{'footer.About us' | translate}}</a></p>
                     <p><a routerLink='/terms-condition'>{{'footer.Terms & Conditions' | translate}}</a></p>
                     <p><a routerLink='/blog'>{{'footer.Blog' | translate}}</a></p>
                 </div>
-                <div class="col-sm-12 col-sm-3 col-lg-3" style="width: 10% !important;">
+                <div class="services">
                     <h3> {{'footer.Services' | translate}}</h3>
                     <p> <a routerLink=''>{{'footer.Buy' | translate}}</a></p>
                     <p><a routerLink=''>{{'footer.Rent' | translate}}</a></p>
                     <p><a routerLink=''>{{'footer.Sell' | translate}}</a></p>
                     <p><a routerLink=''>{{'footer.Rental' | translate}}</a></p>
                 </div>
-                <div class="col-sm-12 col-sm-3 col-lg-3" style="width: 15% !important;">
+                <div class="contacts">
                     <h3> {{'footer.Contact' | translate}}</h3>
                     <p> {{contacts.contact_phone}} </p>
                     <p> {{contacts.contact_email}} </p>
                 </div>
-                <div class="col-sm-12 col-sm-3 col-lg-3" 
-                style="width: 30% !important;
-                text-align: center;">
+                <div class="download">
                     
                     <h3> {{'home.Download app.title' | translate}} </h3>
                     
@@ -62,5 +59,4 @@
             <hr class="line-break">
             <img style="width:200px;margin-bottom: 10px;" src="../../../../assets/images/Group 1347@2x.png" alt="..."/>
         </div>
-    </div>
 </div>
