--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,86 +1,149 @@
 .footer {
     box-shadow: 0px -3px 16px #59595919;
-    .logo {
-        display: block;
-        width: fit-content;
-        height: fit-content;
-        
-        img{
-            width: 110px;
+    padding: 3rem 3rem 0rem 3rem !important;
+
+    .responsive{
+        display: flex;
+        justify-content: space-between;
+
+        @media (max-width: 425px) {
+            display: block;
         }
-    }
+            
+        .image{
+            width: 30%;
 
-    .the-first-platform-that-offer1 {
-        position: relative;
-        display: inline-block;
-        width: 240px;
-        margin-top: 5%;
-        margin-bottom: 5%;
-    }
-
-    h3 {
-        color: #2C2C2C;
-        font-size: 1.15rem;
-        margin-bottom: 10%;
-        font-weight: bold;
-    }
-    p {
-        color: #A9A9A9;
-        a {
-            color: inherit;
-            text-decoration: none;
-        }
-    }
-    .social-links {
-        span {
-            cursor: pointer;
-            display: inline-block;
-            opacity: 1;
-            width: 24px;
-            height: 24px;
-            padding: 0px 24px;
-            &.fb {
-                background: transparent url('../../assets/images/facebook-fill.svg') 0% 0% no-repeat padding-box;
-            }
-            &.ig {
-                background: transparent url('../../assets/images/instagram-line.svg') 0% 0% no-repeat padding-box;
-            }
-            &.tw {
-                background: transparent url('../../assets/images/twitter-fill.svg') 0% 0% no-repeat padding-box;
-            }
-            &.you {
-                background: transparent url('../../assets/images/youtube-fill.svg') 0% 0% no-repeat padding-box;
-            }
-            &.ln {
-                background: transparent url('../../assets/images/linkedin-box-fill.svg') 0% 0% no-repeat padding-box;
+            @media (max-width: 425px) {
+                width: 100%;
+                margin: 5% 0%;
             }
 
-        }
-        
-    }
-
-    .line-break {
-        border: 1px solid #FD7363;
-        background: transparent linear-gradient(180deg, #FD4965 0%, #FD7363 100%) 0% 0% no-repeat padding-box;
-    }
-
-    .left-sec {
-        .downlaod {
-            img {
-                width: 30%;
-                @media (max-width: 1024px) {
-                    width: 165px;
-                }
-                margin-right: 5px;
-                display: inline-block !important;
-                cursor: pointer;
-                @media (max-width: 768px) {
-                    width: 170px;
+            .logo {
+                display: block;
+                width: fit-content;
+                height: fit-content;
+                
+                img{
+                    width: 110px;
                 }
             }
-        }
-    }
+    
+            .the-first-platform-that-offer1 {
+                position: relative;
+                display: inline-block;
+                width: 240px;
+                margin-top: 5%;
+                margin-bottom: 5%;
+            }
 
+            .social-links {
+                span {
+                    cursor: pointer;
+                    display: inline-block;
+                    opacity: 1;
+                    width: 24px;
+                    height: 24px;
+                    padding: 0px 24px;
+                    &.fb {
+                        background: transparent url('../../assets/images/facebook-fill.svg') 0% 0% no-repeat padding-box;
+                    }
+                    &.ig {
+                        background: transparent url('../../assets/images/instagram-line.svg') 0% 0% no-repeat padding-box;
+                    }
+                    &.tw {
+                        background: transparent url('../../assets/images/twitter-fill.svg') 0% 0% no-repeat padding-box;
+                    }
+                    &.you {
+                        background: transparent url('../../assets/images/youtube-fill.svg') 0% 0% no-repeat padding-box;
+                    }
+                    &.ln {
+                        background: transparent url('../../assets/images/linkedin-box-fill.svg') 0% 0% no-repeat padding-box;
+                    }
+    
+                }
+                
+            }
+        }
+
+        .links{
+            width: 15%;
+
+            @media (max-width: 425px) {
+                width: 100%;
+                margin: 5% 0%;
+            }
+        }
+
+        .services{
+            width: 10%;
+
+            @media (max-width: 425px) {
+                width: 100%;
+                margin: 5% 0%;
+            }
+        }
+
+        .contacts{
+            width: 15%;
+
+            @media (max-width: 425px) {
+                width: 100%;
+                margin: 5% 0%;
+            }
+        }
+
+        .download{
+            width: 30%;
+            text-align: center;
+
+            @media (max-width: 425px) {
+                text-align: start;
+                width: 100%;
+                margin: 5% 0%;
+            }
+
+            .left-sec {
+                .downlaod {
+                    img {
+                        width: 30%;
+                        @media (max-width: 1024px) {
+                            width: 165px;
+                        }
+                        margin-right: 5px;
+                        display: inline-block !important;
+                        cursor: pointer;
+                        @media (max-width: 768px) {
+                            width: 170px;
+                        }
+                    }
+                }
+            }
+        }
+        
+
+        h3 {
+            color: #2C2C2C;
+            font-size: 1.15rem;
+            margin-bottom: 10%;
+            font-weight: bold;
+        }
+        p {
+            color: #A9A9A9;
+            a {
+                color: inherit;
+                text-decoration: none;
+            }
+        }
+        
+
+        .line-break {
+            border: 1px solid #FD7363;
+            background: transparent linear-gradient(180deg, #FD4965 0%, #FD7363 100%) 0% 0% no-repeat padding-box;
+        }
+
+        
+
+    }
 
     
 }
